--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2105,6 +2105,20 @@
    "source": [
     "The XGBoost Classifier has shown strong predictive performance, with an accuracy of 95.95%. It has a strong recall for churners, with 77% of actual churners captured, and 95% of churn predictions correct. The model has a robust capability in distinguishing between churners and non-churners, with a ROC AUC Score of 0.92. Cross-validation accuracy is 94.97%, and training accuracy is 100%. XGBoost identifies features like total day charge, total day minutes, and customer service calls as key contributors to churn predictions. However, it has limitations such as overfitting risk, computational complexity, and less interpretability than simpler models like Logistic Regression. Recommendations include regularization using L1 or L2 regularization and tuning hyperparameters to mitigate overfitting. Focusing on recall improvement for churners is crucial, as false negatives could have significant business implications. Using tools like SHAP can enhance interpretability and better understand feature contributions. Prioritizing retention strategies for customers with high day charges, frequent day usage, and multiple customer service calls is recommended."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Conclusion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The project used machine learning to predict customer churn for a telecommunications company using the SyriaTel Customer Churn Dataset. Models explored included Logistic Regression, Random Forest, and XGBoost, with XGBoost achieving a high accuracy of 95.95% and an impressive recall. Significant predictors of churn included high total day charges, extended day minutes, and frequent customer service calls. These findings provide actionable insights into customer behavior, enabling targeted retention strategies like improved customer support and loyalty incentives. However, XGBoost's perfect training accuracy suggests potential overfitting, requiring further validation and testing."
+   ]
   }
  ],
  "metadata": {
